@@ -1,5 +1,6 @@
 4.28
 
+- Added: New server lobby param/description.ext param to disable transfer of points from one player to another in ranked mode ("Allow transfer of points to other players in ranked mode:", d_transf_allow)
 - Changed: Removed jump flags created at seized main targets in the TT version
 - Changed: If disable TI or disable NVG is turned on in the server lobby launchers sight will be blocked when either NV or TI mode is used
 - Fixed: When using earplugs in the TT version a dialog error appeared because of a missing gui baseclass
